<?xml version="1.0"?>
<package>
  <name>warehouse_robot</name>
  <version>0.1.2</version>
  <description>The warehouse_robot package</description>

  <maintainer email="contactr@prajankya.me">prajankya</maintainer>
  <license>GPLv3</license>

  <url type="website">http://snappyrobotics.github.io/warehouse_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <export>

  </export>
</package>
